--- a/SignalingServer/pom.xml
+++ b/SignalingServer/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>java-dotenv</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.12.0</version>
+        </dependency>
     </dependencies>
 
 </project>
