--- a/SignalingServer/pom.xml
+++ b/SignalingServer/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>amqp-client</artifactId>
             <version>5.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.7.5</version>
+        </dependency>
     </dependencies>
 
 </project>
